<resources>

    <string name="app_name">Podcast Listener</string>

    <string name="testingText">text for test</string>

    <string name="inetConnected">Internet connected</string>
    <string name="inetDisconnected">Internet disconnected</string>
    <string name="wifiIsAvailable">WiFi is available</string>
    <string name="wifiIsUnavailable">WiFi is unavailable</string>

    <string name="repeatingChars1">Темы наших слушателей</string>
    <string name="repeatingChars2">Спонсор этого выпуска</string>

    <string name="initialTitle">Radio-T</string>
    <string name="initialSummary">Trying to get new data…</string>
    <string name="defaultRssFeedUrl">feeds.rucast.net/Radio-t</string>
    <string name="noTitle">no title</string>
    <string name="noLink">no link</string>
    <string name="noPubDate">unknown publication date</string>
    <string name="noMediaContentUrl">no media for download</string>
    <string name="noType">unknown type</string>
    <string name="noSummary">no summary info</string>
    <!-- long defaultFileSize = 0 - i decided to keep this data not in String -->
    <string name="failedTitle">Failed getting new data</string>
    <string name="failedSummary">Check your Internet settings, please</string>
    <string name="image_for_current_podcast">image for current podcast</string>
    <string name="notificationSubText">"Click here to open podcast player"</string>
    <string name="defaultProgress">00:00:00 / hh:mm:ss</string>

</resources>