<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchMatch"
    tools:context=".activities.StartingActivity">

    <FrameLayout
        android:id="@+id/flMainPicture"
        style="@style/MatchWrap">

        <ImageView
            android:id="@+id/ivMainPicture"
            android:layout_width="@dimen/defaultPictureSize"
            android:layout_height="@dimen/defaultPictureSize"
            android:layout_gravity="center"
            android:contentDescription="@string/image_for_current_podcast" />

    </FrameLayout>

    <TextView
        android:id="@+id/tvTitle"
        style="@style/MatchWrap.Gravity_Center.MaxLines1"
        android:layout_below="@id/flMainPicture"
        android:text="@string/noTitle"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tvLink"
        style="@style/MatchWrap.Gravity_Center.MaxLines1"
        android:layout_below="@id/tvTitle"
        android:text="@string/noLink" />

    <TextView
        android:id="@+id/tvPubDate"
        style="@style/MatchWrap.Gravity_Center.MaxLines1"
        android:layout_below="@id/tvLink"
        android:text="@string/noPubDate" />

    <TextView
        android:id="@+id/tvTiming"
        style="@style/MatchWrap.Gravity_Center.MaxLines1"
        android:layout_below="@id/tvPubDate"
        android:layout_marginTop="@dimen/size_8"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@color/accent" />

    <SeekBar
        android:id="@+id/sbTiming"
        style="@style/MatchWrap"
        android:layout_height="64dp"
        android:layout_below="@id/tvTiming"
        android:layout_marginBottom="@dimen/size_minus_16"
        android:max="100"
        android:progress="0"
        android:tag="@string/app_name" />

    <LinearLayout
        android:id="@+id/llPlayerControls"
        style="@style/MatchWrap.Gravity_Center"
        android:layout_below="@+id/sbTiming"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bMute"
            style="?buttonBarButtonStyle"
            android:layout_width="@dimen/size_32"
            android:layout_height="@dimen/size_32"
            android:layout_margin="@dimen/size_16"
            android:background="@drawable/icon_media_mute" />

        <Button
            android:id="@+id/bRewind"
            style="?buttonBarButtonStyle"
            android:layout_width="@dimen/size_48"
            android:layout_height="@dimen/size_48"
            android:background="@drawable/icon_media_rew_blue" />

        <Button
            android:id="@+id/bPlayPause"
            style="?buttonBarButtonStyle"
            android:layout_width="@dimen/size_96"
            android:layout_height="@dimen/size_96"
            android:background="@drawable/icon_media_play_blue" />

        <Button
            android:id="@+id/bForward"
            style="?buttonBarButtonStyle"
            android:layout_width="@dimen/size_48"
            android:layout_height="@dimen/size_48"
            android:background="@drawable/icon_media_ff_blue" />

        <Button
            android:id="@+id/bStop"
            style="?buttonBarButtonStyle"
            android:layout_width="@dimen/size_32"
            android:layout_height="@dimen/size_32"
            android:layout_margin="@dimen/size_16"
            android:background="@drawable/icon_media_stop" />

    </LinearLayout>

    <FrameLayout
        style="@style/MatchMatch"
        android:layout_below="@id/llPlayerControls">

        <TextView
            android:id="@+id/tvSummary"
            style="@style/MatchWrap.Gravity_Center"
            android:layout_gravity="center"
            android:layout_margin="@dimen/size_16"
            android:text="@string/noSummary" />

    </FrameLayout>

</RelativeLayout>